--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,15 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 95vh;
+	position: relative;
+	z-index: 9;
+}
+
+.background {
+	position: absolute;
+	z-index: 1;
+	object-fit: cover;
+	opacity: 0.7;
+	width: 100%;
+	height: -webkit-fill-available;
 }
