--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
-body {
+/* body {
 	background: url("./assets/ant-rozetsky-HXOllTSwrpM-unsplash@2x.png") no-repeat center center;
 	background-size: cover;
-	backdrop-filter: blur(5px);
-	height: 100%;
+	backdrop-filter: blur(10px) opacity(95%);
+	margin: 0;
+} */
+
+body {
+	margin: 0;
+}
+
+.main {
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
